--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: zsh2401's Blog
+title: zsh2401的实验室
 subtitle:
 description:
 author: Shunhong Zhang
