--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@
 
 # Site
 title: zsh2401的实验室
-subtitle:
+subtitle: Fly me to the moon
 description:
 author: Shunhong Zhang
 language: zh-CN
-timezone:
+timezone: 
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
