--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 # Site
 title: zsh2401的实验室
 subtitle: Fly me to the moon
-description:
-author: Shunhong Zhang
+description: zsh2401's blog site,powered by hexo
+author: zsh2401
 language: zh-CN
 timezone: 
 
