完善博客细节

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: zsh2401的实验室
-subtitle: Fly me to the moon
-description: zsh2401's blog site,powered by hexo
+title: 2401的晚秋咖啡
+subtitle: 只是一个简单的博客而已
+description: just a blog
 author: zsh2401
 language: zh-CN
 timezone: 
