--- a/themes/next-6.4.2/_config.yml
+++ b/themes/next-6.4.2/_config.yml
@@ -193,6 +193,7 @@ links_layout: block
 # links_layout: inline
 links:
   叉叉白博客: https://xxwhite.com/
+  web1n博客: https://https.vc/
   
 # Sidebar Avatar
 avatar:
