--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "version": "3.8.0"
   },
   "dependencies": {
+    "express": "^4.16.4",
     "hexo": "^3.8.0",
     "hexo-cli": "^1.1.0",
     "hexo-deployer-git": "^0.3.1",
