--- a/themes/next-6.7.0/_config.yml
+++ b/themes/next-6.7.0/_config.yml
@@ -185,7 +185,7 @@ social:
   Weibo: https://weibo.com/zsh2401 || weibo
   # Google: https://plus.google.com/zsh2401 || google
   # Zhihu: https://www.zhihu.com/people/zhang-shun-hong-86/activities
-  FB Page: https://facebook.com/shunhong.zhang.338 || facebook
+  # FB Page: https://facebook.com/shunhong.zhang.338 || facebook
   #VK Group: https://vk.com/yourname || vk
   #StackOverflow: https://stackoverflow.com/yourname || stack-overflow
   #YouTube: https://youtube.com/yourname || youtube
