--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Late Autumn Coffee
-subtitle: 2401的晚秋咖啡
-description: just a blog
+title: 2401的晚秋咖啡
+subtitle: 2401's late autumn coffee
+description: zsh2401的个人网站与博客站点,在这里,你或许能看到更加更加正式的文章,动态,以及我不会在社交媒体中发送的内容...
 author: zsh2401
 language: zh-CN
 timezone: 
