--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 2401的晚秋咖啡
 subtitle: 2401's late autumn coffee
-description: zsh2401的个人网站与博客站点,在这里,你或许能看到相对更加正式的文章与动态,以及那些我不会在社交媒体中发布的内容...
+description: 这里是zsh2401的个人网站/博客站点，我常会在此更新技术，新闻，随笔等等各种各样的文章，感谢您的理解与支持。
 author: zsh2401
 language: zh-CN
 timezone: 
