--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hexo-generator-search": "^2.1.1",
     "hexo-generator-tag": "^0.2.0",
     "hexo-helper-qrcode": "^1.0.2",
+    "hexo-migrator-wordpress": "^1.0.0",
     "hexo-renderer-ejs": "^0.3.0",
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-stylus": "^0.3.1",
