--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ theme: next-6.7.0
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repository: git@github.com:zsh2401/zsh2401.github.io.git
+  repository: https://git.dev.tencent.com/dtid_a6d9595031e5d1d2/zsh2401.top.git
   branch: master 
 search:
     path: search.xml
