--- a/package.json
+++ b/package.json
@@ -3,19 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.8.0"
+    "version": "3.9.0"
   },
   "scripts": {
     "min": "gulp build"
   },
   "dependencies": {
     "express": "^4.16.4",
-    "gulp-htmlclean": "^2.7.22",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-imagemin": "^6.2.0",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-uglify": "^3.0.2",
     "hexo": "^3.8.0",
+    "hexo-all-minifier": "^0.5.3",
     "hexo-cli": "^1.1.0",
     "hexo-deployer-git": "^0.3.1",
     "hexo-generator-archive": "^0.1.4",
