--- a/_config.yml
+++ b/_config.yml
@@ -83,12 +83,8 @@ deploy:
 search:
     path: search.xml
     field: all
-all_minifier: true
-image_minifier:
-  enable: true
-  interlaced: true
-  multipass: true
-  optimizationLevel: 2
-  pngquant: true
-  progressive: true
-  silent: true
+
+lazyload:
+  enable: false 
+  onlypost: false
+  loadingImg: # eg. ./images/loading.png 
