--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://zsh2401.top
+url: http://blog.zsh2401.top
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -83,8 +83,3 @@ deploy:
 search:
     path: search.xml
     field: all
-
-lazyload:
-  enable: false 
-  onlypost: false
-  loadingImg: # eg. ./images/loading.png 
