--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "hexo-site",
-  "version": "0.0.0",
+  "name": "zsh2401-blog",
+  "version": "0.0.1",
   "private": true,
   "hexo": {
-    "version": "3.9.0"
+    "version": "4.0.0"
   },
   "scripts": {
     "min": "gulp build"
   },
   "dependencies": {
     "express": "^4.16.4",
-    "hexo": "^3.9.0",
+    "hexo": "^4.0.0",
     "hexo-cli": "^1.1.0",
     "hexo-deployer-git": "^0.3.1",
     "hexo-generator-archive": "^0.1.4",
