--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "hexo-generator-search": "^2.1.1",
     "hexo-generator-tag": "^0.2.0",
     "hexo-helper-qrcode": "^1.0.2",
+    "hexo-lazyload": "^1.3.6",
+    "hexo-lazyload-image": "^1.0.4",
     "hexo-migrator-wordpress": "^1.0.0",
     "hexo-related-popular-posts": "^3.0.6",
     "hexo-renderer-ejs": "^0.3.0",
