--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hexo-generator-search": "^2.1.1",
     "hexo-generator-tag": "^0.2.0",
     "hexo-helper-qrcode": "^1.0.2",
+    "hexo-hide-posts": "^0.1.0",
     "hexo-lazyload": "^1.3.6",
     "hexo-lazyload-image": "^1.0.4",
     "hexo-migrator-wordpress": "^1.0.0",
